table headings updated

--- a/ch-6/spaning-columns.html
+++ b/ch-6/spaning-columns.html
@@ -12,8 +12,8 @@
     <tr> 
     <th>DATES</th>
     <th>DAYS</th>
-    <th>MISTRY</th>
-    <th>MAZDORY</th>
+    <th>Mason</th>
+    <th>Labour</th>
     <th>Kharcha</th>        
     </tr>
    <tr>   
