--- a/ch-6/spaning-columns.html
+++ b/ch-6/spaning-columns.html
@@ -7,9 +7,11 @@
     <title>mazhar aheer</title>
 </head>
 <body>
-    <table><em><h1>JAAM ASLAM</h1></em>
+    <em><h1 style="color:darkgreen" >JAAM ASLAM</h1></em>
+
+    <table style="border-style:solid" >
         
-    <tr> 
+    <tr style="border-style:dotted; color:brown" > 
     <th>DATES</th>
     <th>DAYS</th>
     <th>Mason</th>
