--- a/ch-6/spaning-columns.html
+++ b/ch-6/spaning-columns.html
@@ -7,11 +7,11 @@
     <title>mazhar aheer</title>
 </head>
 <body>
-    <em><h1 style="color:darkgreen" >JAAM ASLAM</h1></em>
+   <u> <em><h1 style="color:brown; margin-left:50px " >JAAM ASLAM</h1></em></u>
 
-    <table style="border-style:solid" >
+    <table style="color:darkblue "   >
         
-    <tr style="border-style:dotted; color:brown" > 
+    <tr  > 
     <th>DATES</th>
     <th>DAYS</th>
     <th>Mason</th>
@@ -26,7 +26,7 @@
     <td>500</td>
   </tr>
     <tr>
-   <td>6-5-2017</td>
+   <td  >6-5-2017</td>
    <td>saturday</td>
    <td>_</td>
    <td>P</td>
@@ -94,24 +94,25 @@
    <tr>
    <td>16-5-2017</td>
    <td>tuesday</td>
-   <td></td>
-   <td></td>
-   <td></td>
+   <td>_</td>
+   <td>_</td>
+   <td>_</td>
    </tr>
    <tr>
    <td>17-5-2017</td>
    <td>wednesday</td>
-   <td></td>
-   <td></td>
-   <td></td>
+   <td>_</td>
+   <td>P</td>
+   <td>700</td>
    </tr>
    <tr>
    <td>18-5-2017</td>
    <td>thursday</td>
-   <td></td>
-   <td></td>
-   <td></td>
+   <td>_</td>
+   <td>P</td>
+   <td>800</td>
     </tr>
+    td
 
 
 
