--- a/ch-7/input-fields.html
+++ b/ch-7/input-fields.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-    <h1 align='middle' >HTML Input Fields</h1>
+    <h1 style="margin-left:320px">HTML Input Fields</h1>
+
+    <form action="home.html" style="margin-top:50px; margin-left:300px; border-style:solid; width:250px; padding:30px" >
+        <h3>Form Name</h3>
+        text field <br>
+        <input type="text" name="anyText" maxlength="10" required><br><br> 
+        pasword field <br>
+        <input type="password" minlength="6"><br><br> 
+        Email <br>
+        <input type="email" size="25" ><br><br> 
+        Date of birth <br>
+        <input type="date" ><br><br> 
+        Time <br>
+        <input type="time"><br><br> 
+        Month <br>
+        <input type="month"><br><br>
+        Text Area <br>
+        <textarea name="" id="" cols="20" rows="5"></textarea><br>
+
+        <button>Submit</button>
+
+    </form>
+
 </body>
+
 </html>
