--- a/ch-3/ordered-list.html
+++ b/ch-3/ordered-list.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Mazhar Aheer</title>
 </head>
 <body>
     
+    <h1 align="middle" >ORDERED LIST</h1>
+    Branches of physics
+    <ol>
+     <li>Atomic physics</li>
+     <li>Bio physics</li>
+     <li>Electronic physics</li>
+     <li>astro physics</li>  
+    </ol>
+   Cites of Pakistan
+    <ol>
+     <li>Karachi</li>
+     <li>Lahore</li>
+     <li>Islamabad</li>
+     <li>Multan</li>  
+    </ol>
+
 </body>
 </html>
