--- a/ch-2/sup-sub.html
+++ b/ch-2/sup-sub.html
@@ -7,7 +7,19 @@
     <title>Mazhar Aheer</title>
 </head>
 <body>
-    <u><center><h1>SUPERSCRIPT</h1></center></u>
+    <u><h1 align="middle" >SUPERSCRIPT</h1></u>
+
     <h3>1<sup>st</sup>position</h3>
+    <h3>2 <sup>nd</sup>position</h3>
+    <h3>3<sup>rd</sup>position</h3>
+    <h3>4<sup>th</sup>position</h3>
+
+    <u><h1 align="middle" >SUBSCRIPT</h1></u>
+   
+    <h3>N<sub>2</sub>O</h3>
+    <h3>N<sub>2</sub>O<sub>3</sub></h3>
+    <h3>N<sub>2</sub>O<sub>4</sub> </h3>
+    <h3>N<sub>2</sub>O<sub>5</sub> </h3>
+
 </body>
 </html>
