--- a/ch-8/aheer fashion/home.html
+++ b/ch-8/aheer fashion/home.html
@@ -13,19 +13,29 @@
         height: 30px;
         float: right;
         border-style:solid;
-       
+       background-color:mediumblue;
+       padding:8px;
+    }
+    .button{
+     width:80px;
+     height:40px;
+     margin-right:20px;   
+     margin-top: 5px;
     }
     </style>
     <div>
-     <div  >
+     <div style="background-color:tan "  >
      <img class="social" src="images/facebook.jpg" alt=" facebook pic" >
      <img class="social" src="images/google.png" alt="google pic"  >
      <img class="social" src="images/instagram.jpg" alt="instagram pic" >
      <img class="social"  src="images/pintrest.jpg" alt="pintrest pic" >
      <img class="social" src="images/twiter.png" alt="twiter pic">
      </div></br></br>
-     <div style="border-style:solid" ><h1>Aheer Fashion</h1></div>
-     <div></div>   
+     <div style="border-style:solid; padding-left:50px; background-color: red; height:100px; padding:50px; font-size:30px; margin-top:30px;"  ><h1>Aheer Fashion</h1></div>
+     <div style="background-color:tan; padding:10px;"  >
+     <button class="button" >home</button>
+     <button class="button">women</button>
+     <button class="button">men</button></div>   
     </div>
 
 </body>
