--- a/ch-8/aheer fashion/home.html
+++ b/ch-8/aheer fashion/home.html
@@ -46,5 +46,14 @@
      <a href="men.html"><button class="button">men</button></div>  </a> 
     </div>
 
+<div style="border-style: solid; width:100%; height:600px;" >
+body
+</div>
+
+<div style="border-style: solid; width:100%; height:300px;" >
+footer
+</div>
+
+
 </body>
 </html>
