--- a/ch-8/aheer fashion/home.html
+++ b/ch-8/aheer fashion/home.html
@@ -50,8 +50,20 @@
 body
 </div>
 
-<div style="border-style: solid; width:100%; height:300px;" >
-footer
+<div style="border-style: solid; width:100%; height:300px; padding:10px; " >
+
+<div style="border-style:solid; width:30%; height:80%; display:inline-block;" ><h3 >About us</h3><hr><b>Paragraph</b><p>kjiofdiufl jffd;flduof diuhyioufdoi fidoifkijlf </p></div>
+<div style="border-style:solid; width:30%; height:80%; display:inline-block; " ><h3>Branches</h3>
+<hr>
+<ol>
+<li>Karachi</li>
+<li>Multan</li>
+<li>Lahore</li>
+<li>Islamabad</li>
+<li>Fasalabad</li></ol>
+</div>
+<div style="border-style:solid; width:30%; height:80%; display:inline-block;" ><h3>footer</h3><hr></div>
+
 </div>
 
 
