--- a/ch-8/aheer fashion/contact.html
+++ b/ch-8/aheer fashion/contact.html
@@ -9,6 +9,32 @@
 <body>
         
   <h1 style="margin-left:320px;" >html input fields</h1>
+  <form action="home.html" style="margin-top:50px; margin-left:300px; border-style:solid; width:250px; padding:30px; background-color:burlywood; " >
+ 
+
+ First name <br>
+ <input type="text"><br><br>
+ Last name <br>
+ <input type="text"><br><br>
+  Use Name <br>
+  <input type="user name"><br><br>
+  Password <br>
+  <input type="password"> <br><br>
+   Date of birth <br>
+  <input type="date" ><br><br> 
+  Time <br>
+  <input type="time"><br><br> 
+  Web URL <br>
+  <input type="web url"><br><br>
+  City <br>
+  <input type="city"><br><br>
+   Text Area <br>
+  <textarea name="" id="" cols="20" rows="5"></textarea><br><br>
+
+  <button>send</button>
+
+
+
 
 </body>
 </html>
