--- a/ch-8/aheer fashion/home.html
+++ b/ch-8/aheer fashion/home.html
@@ -17,7 +17,7 @@
             height: 40px;
             float: right;
             border-style: solid;
-            background-color: tan;
+            background-color: blue;
             padding: 5px;
         }
 
@@ -27,12 +27,13 @@
             height: 40px;
             margin-right: 20px;
             margin-top: 5px;
+            background-color: white;
         }
         </style>
 
 
       <div>
-        <div style="background-color:tan ">
+        <div>
             <img class="social" src="images/facebook.jpg" alt=" facebook pic">
             <img class="social" src="images/google.png" alt="google pic">
             <img class="social" src="images/instagram.jpg" alt="instagram pic">
@@ -46,7 +47,7 @@
         <div style="border-style:solid; padding-left:50px; background-color: red; height:100px; padding:50px; font-size:30px; margin-top:25px;">
             <h1>Aheer Fashion</h1>
         </div>
-        <div style="background-color:tan; padding:10px;">
+        <div style="background-color:green; padding:10px;">
             <a href="home.html"> <button class="button" >home</button></a>
             <a href="women.html"><button class="button">women</button></a>
             <a href="men.html"><button class="button">men</button>
@@ -58,7 +59,7 @@
             body
  </div>
 
- <div style="border-style: solid; width:100%; height:290px; padding:5px; ">
+ <div style="border-style: solid; width:100%; height:290px; padding:5px; background-color:salmon ">
 
  <div style="border-style:solid; width:30%; height:80%; display:inline-block; ">
  <h3>About us</h3>
