--- a/ch-8/aheer fashion/men.html
+++ b/ch-8/aheer fashion/men.html
@@ -14,7 +14,8 @@
             height: 40px;
             float: right;
             border-style: solid;
-            background-color: blue;
+            background-color: blue
+            ;
             padding: 5px;
             margin-top:5px;
         }
@@ -25,7 +26,7 @@
             height: 40px;
             margin-right: 20px;
             margin-top: 5px;
-            background-color: white;
+            background-color: bisque;
         }
 
     </style>
@@ -33,11 +34,11 @@
     
     <div>
      <div >
-     <img class="social" src="images/facebook.jpg" alt=" facebook pic" >
-     <img class="social" src="images/google.png" alt="google pic"  >
-     <img class="social" src="images/instagram.jpg" alt="instagram pic" >
-     <img class="social"  src="images/pintrest.jpg" alt="pintrest pic" >
-     <img class="social" src="images/twiter.png" alt="twiter pic">
+     <img class="social"  src="images/facebook.jpg" alt=" facebook pic"  >
+     <img  class="social" src="images/google.png" alt="google pic"  >
+     <img  class="social" src="images/instagram.jpg" alt="instagram pic" >
+     <img  class="social" src="images/pintrest.jpg" alt="pintrest pic" >
+     <img  class="social" src="images/twiter.png" alt="twiter pic">
      </div></br></br>
 
 
