--- a/ch-8/aheer fashion/women.html
+++ b/ch-8/aheer fashion/women.html
@@ -15,7 +15,7 @@
             height: 40px;
             float: right;
             border-style: solid;
-            background-color: blue;
+            background-color:blue;
             padding: 5px;
             margin-top:5px;
         }
@@ -26,7 +26,7 @@
             height: 40px;
             margin-right: 20px;
             margin-top: 5px;
-            background-color: white;
+            background-color: bisque;
         }
 
     </style>
