--- a/ch-8/aheer fashion/home.html
+++ b/ch-8/aheer fashion/home.html
@@ -27,7 +27,7 @@
             height: 40px;
             margin-right: 20px;
             margin-top: 5px;
-            background-color: white;
+            background-color:bisque;
         }
         </style>
 
@@ -55,7 +55,7 @@
             </div>  </a>
         </div>
 
- <div style="border-style: solid; width:100%; height:600px;">
+ <div style="border-style: solid; width:100%; height:600px; background-color:aliceblue; ">
             body
  </div>
 
