--- a/ch-8/aheer fashion/home.html
+++ b/ch-8/aheer fashion/home.html
@@ -11,7 +11,7 @@
 <body>
 
 
-       <style>
+    <style>
         .social {
             width: 30px;
             height: 40px;
@@ -27,12 +27,12 @@
             height: 40px;
             margin-right: 20px;
             margin-top: 5px;
-            background-color:bisque;
+            background-color: bisque;
         }
-        </style>
+    </style>
 
 
-      <div>
+    <div>
         <div>
             <img class="social" src="images/facebook.jpg" alt=" facebook pic">
             <img class="social" src="images/google.png" alt="google pic">
@@ -55,34 +55,36 @@
             </div>  </a>
         </div>
 
- <div style="border-style: solid; width:100%; height:600px; background-color:aliceblue; ">
-            body
- </div>
+        <div style="border-style: solid; width:100%; height:600px; background-color:aliceblue; ">
+            
+        </div>
 
- <div style="border-style: solid; width:100%; height:290px; padding:5px; background-color:salmon ">
+        <div style="border-style: solid; width:100%; padding:20px; height:250px;  background-color:salmon ">
 
- <div style="border-style:solid; width:30%; height:80%; display:inline-block; ">
- <h3>About us</h3>
- <hr><b>Paragraph</b>
- <p>Fashion is a popular style of clothes, hair, manners, habits, etc. at a particular time or place. Clothes mark out a man’s status. The craze for fashion is great among young people all over the world. Fashion has spread in all the spheres of our life. </p>
- </div>
- <div style="border-style:solid; width:30%; height:80%; display:inline-block; ">
- <h3>Branches</h3>
- <hr>
- <ol>
- <li>Karachi</li>
- <li>Multan</li>
- <li>Lahore</li>
- <li>Islamabad</li>
- <li>Fasalabad</li>
- </ol>
- </div>
- <div style="border-style:solid; width:30%; height:80%; display:inline-block;  ">
- <h3>footer</h3>
- <hr>
- </div>
+            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block; ">
+                <h3>About us</h3>
+                <hr><b>Paragraph</b>
+                <p>Fashion is a popular style of clothes, hair, manners, habits, etc. at a particular time or place. Clothes
+                    mark out a man’s status. The craze for fashion is great among young people all over the world. Fashion
+                    has spread in all the spheres of our life. </p>
+            </div>
+            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block; ">
+                <h3>Branches</h3>
+                <hr>
+                <ol>
+                    <li>Karachi</li>
+                    <li>Multan</li>
+                    <li>Lahore</li>
+                    <li>Islamabad</li>
+                    <li>Fasalabad</li>
+                </ol>
+            </div>
+            <div style="border-style:solid; margin:10px; float:left; width:30%; height:90%; display:inline-block;  ">
+                <h3>footer</h3>
+                <hr>
+            </div>
 
- </div>
+        </div>
 
 
 </body>
