--- a/ch-8/aheer fashion/men.html
+++ b/ch-8/aheer fashion/men.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mazhar Aheer</title>
 </head>
+
 <body>
     <style>
-        
-         .social {
+        .social {
             width: 30px;
             height: 40px;
             float: right;
             border-style: solid;
-            background-color: blue
-            ;
+            background-color: blue;
             padding: 5px;
-            margin-top:5px;
+            margin-top: 5px;
+        }
+
+        .img {
+            width: 140px;
+            height: 140px;
         }
 
 
@@ -28,54 +33,86 @@
             margin-top: 5px;
             background-color: bisque;
         }
-
     </style>
-        <div>
-    
     <div>
-     <div >
-     <img class="social"  src="images/facebook.jpg" alt=" facebook pic"  >
-     <img  class="social" src="images/google.png" alt="google pic"  >
-     <img  class="social" src="images/instagram.jpg" alt="instagram pic" >
-     <img  class="social" src="images/pintrest.jpg" alt="pintrest pic" >
-     <img  class="social" src="images/twiter.png" alt="twiter pic">
-     </div></br></br>
+
+        <div>
+            <div>
+                <img class="social" src="images/facebook.jpg" alt=" facebook pic">
+                <img class="social" src="images/google.png" alt="google pic">
+                <img class="social" src="images/instagram.jpg" alt="instagram pic">
+                <img class="social" src="images/pintrest.jpg" alt="pintrest pic">
+                <img class="social" src="images/twiter.png" alt="twiter pic">
+            </div>
+            </br>
+            </br>
 
 
-     <div style="border-style:solid; padding-left:50px; background-color: red; height:100px; padding:50px; font-size:30px; margin-top:30px;"  ><h1>Aheer Fashion</h1></div>
-     <div style="background-color:green; padding:10px;"  >
-     <a href="home.html"> <button class="button" >home</button></a>
-     <a href="women.html"><button class="button">women</button></a>
-     <a href="men.html"><button class="button">men</button>
+            <div style="border-style:solid; padding-left:50px; background-color: red; height:100px; padding:50px; font-size:30px; margin-top:30px;">
+                <h1>Aheer Fashion</h1>
+            </div>
+            <div style="background-color:green; padding:10px;">
+                <a href="home.html"> <button class="button" >home</button></a>
+                <a href="women.html"><button class="button">women</button></a>
+                <a href="men.html"><button class="button">men</button>
      <a href="contact.html"><button class="button">contact</button>
-     </div>  </a> 
-    </div>
+     </div>  </a>
+            </div>
 
-    <img class="social" src="men images/winter jackets.jpg" alt="jackets pic" title="15$" >
-    <img class="social" src="men images/winter clothes.jpg" alt="clothes pic" title="16$">
-    <img class="social" src="men images/watche-5.jpg" alt="watche pic" title="20$">
-    <img class="social"src="men images/watche-4.jpg" alt="watche pic" title="25$">
-    <img class="social" src="men images/watche-3.jpg" alt="watche pic"title="50$">
-    <img class="social" src="men images/watche-2.jpg" alt="watche pic" title="40$">
-    <img class="social" src="men images/watche-1.jpg" alt="watche pic" title="35$">
-    <img class="social" src="men images/trouser.jpg" alt="trouser pic" title="15$">
-    <img class="social" src="men images/shirts.jpg" alt="shirts pic" title="13$">
-    <img class="social" src="men images/shirt.jpg" alt="shirt pic" title="25$">
-    <img class="social" src="men images/man kitting.jpg" alt="kitting pic" title="20$">
-    <img class="social" src="men images/man kittes.jpg" alt="kittes pic" title="50$">
-    <img class="social" src="men images/man kits.jpg" alt="kits pic" title="30$">
-    <img class="social" src="men images/jackets.jpg" alt="jackets pic" title="18$">
-    <img class="social" src="men images/images-4.jpg" alt="images pic" title="12$">
-    <img class="social" src="men images/images-3.jpg" alt="images pic" title="8$">
-    <img class="social" src="men images/images-2.jpg" alt="images pic" title="20$">
-    <img class="social" src="men images/images-1.jpg" alt="images pic" title="15$">
-    <img class="social" src="men images/images-2.jpg" alt="images pic" title="10$">
-    <img class="social" src="men images" alt="" title=""></div>
+<div style="border-style: solid; width:100%; height:600px; background-color:aliceblue; ">
+ 
 
+            <img class="img" src="men images/winter jackets.jpg" alt="jackets pic" title="15$">
+            <img class="img" src="men images/winter clothes.jpg" alt="clothes pic" title="16$">
+            <img class="img" src="men images/watche-5.jpg" alt="watche pic" title="20$">
+            <img class="img" src="men images/watche-4.jpg" alt="watche pic" title="25$">
+            <img class="img" src="men images/watche-3.jpg" alt="watche pic" title="50$">
+            <img class="img" src="men images/watche-2.jpg" alt="watche pic" title="40$">
+            <img class="img" src="men images/watche-1.jpg" alt="watche pic" title="35$">
+            <img class="img" src="men images/trouser.jpg" alt="trouser pic" title="15$">
+            <img class="img" src="men images/shirts.jpg" alt="shirts pic" title="13$">
+            <img class="img" src="men images/shirt.jpg" alt="shirt pic" title="25$">
+            <img class="img" src="men images/man kitting.jpg" alt="kitting pic" title="20$">
+            <img class="img" src="men images/man kittes.jpg" alt="kittes pic" title="50$">
+            <img class="img" src="men images/man kits.jpg" alt="kits pic" title="30$">
+            <img class="img" src="men images/jackets.jpg" alt="jackets pic" title="18$">
+            <img class="img" src="men images/images-4.jpg" alt="images pic" title="12$">
+            <img class="img" src="men images/images-3.jpg" alt="images pic" title="8$">
+            <img class="img" src="men images/images-2.jpg" alt="images pic" title="20$">
+            <img class="img" src="men images/images-1.jpg" alt="images pic" title="15$">
+            <img class="img" src="men images/images-2.jpg" alt="images pic" title="10$">
+            <img class="img" src="men images" alt="" title=""></div> </div>
 
+ <div style="border-style: solid; width:100%; padding:20px; height:250px;  background-color:salmon ">
+
+            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block; ">
+                <h3>About us</h3>
+                <hr><b>Paragraph</b>
+                <p>Fashion is a popular style of clothes, hair, manners, habits, etc. at a particular time or place. Clothes
+                    mark out a man’s status. The craze for fashion is great among young people all over the world. Fashion
+                    has spread in all the spheres of our life. </p>
+            </div>
+            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block; ">
+                <h3>Branches</h3>
+                <hr>
+                <ol>
+                    <li>Karachi</li>
+                    <li>Multan</li>
+                    <li>Lahore</li>
+                    <li>Islamabad</li>
+                    <li>Fasalabad</li>
+                </ol>
+            </div>
+            <div style="border-style:solid; margin:10px; float:left; width:30%; height:90%; display:inline-block;  ">
+                <h3>footer</h3>
+                <hr>
+            </div>
+
+        </div>
 
 
 
 
 </body>
+
 </html>
