--- a/ch-8/aheer fashion/home.html
+++ b/ch-8/aheer fashion/home.html
@@ -32,7 +32,7 @@
     </style>
 
 
-    <div>
+    <div style="background-color:grey; width:996px;" >
         <div>
             <img class="social" src="images/facebook.jpg" alt=" facebook pic">
             <img class="social" src="images/google.png" alt="google pic">
@@ -44,10 +44,10 @@
         </br>
 
 
-        <div style="border-style:solid; padding-left:50px; background-color: red; height:100px; padding:50px; font-size:30px; margin-top:25px;">
+        <div style="border-style:solid; padding-left:50px; background-color: red; width:890px; height:100px; padding:50px; font-size:30px; margin-top:25px;">
             <h1>Aheer Fashion</h1>
         </div>
-        <div style="background-color:green; padding:10px;">
+        <div style="background-color:green; padding:10px; width:976px; ">
             <a href="home.html"> <button class="button" >home</button></a>
             <a href="women.html"><button class="button">women</button></a>
             <a href="men.html"><button class="button">men</button>
@@ -55,20 +55,19 @@
             </div>  </a>
         </div>
 
-        <div style="border-style: solid; width:100%; height:600px; background-color:aliceblue; ">
-            
-        </div>
+        <div style="border-style: solid; width:100%; height:600px; background-color:white; ">
+         </div>
 
-        <div style="border-style: solid; width:100%; padding:20px; height:250px;  background-color:salmon ">
+ <div name="footer" style="border-style: solid; width:96%; padding:20px; height:250px;  background-color:grey;">
 
-            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block; ">
+            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block;  background-color:salmon ">
                 <h3>About us</h3>
                 <hr><b>Paragraph</b>
                 <p>Fashion is a popular style of clothes, hair, manners, habits, etc. at a particular time or place. Clothes
                     mark out a man’s status. The craze for fashion is great among young people all over the world. Fashion
                     has spread in all the spheres of our life. </p>
             </div>
-            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block; ">
+            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block;  background-color:salmon ">
                 <h3>Branches</h3>
                 <hr>
                 <ol>
@@ -79,12 +78,18 @@
                     <li>Fasalabad</li>
                 </ol>
             </div>
-            <div style="border-style:solid; margin:10px; float:left; width:30%; height:90%; display:inline-block;  ">
-                <h3>footer</h3>
-                <hr>
+            <div style="border-style:solid; margin:10px; float:left; width:30%; height:90%; display:inline-block;  background-color:salmon ">
+                <h3>Developer</h3>
+                  <hr>
+                I am Mazhar Aheer. I am learning Web and Mobile developement using HTML, CSS, JavaScipt, React, React Native.
+                You can view my code on <a href="https://github.com/mazharaheer" target="_blank" >GitHub</a>
+              
             </div>
 
         </div>
+
+
+
 
 
 </body>
