--- a/ch-8/aheer fashion/men.html
+++ b/ch-8/aheer fashion/men.html
@@ -23,6 +23,7 @@
         .img {
             width: 140px;
             height: 140px;
+            margin: 10px;
         }
 
 
@@ -36,7 +37,7 @@
     </style>
     <div>
 
-        <div>
+        <div style="background-color:grey; width:996px;">
             <div>
                 <img class="social" src="images/facebook.jpg" alt=" facebook pic">
                 <img class="social" src="images/google.png" alt="google pic">
@@ -48,10 +49,10 @@
             </br>
 
 
-            <div style="border-style:solid; padding-left:50px; background-color: red; height:100px; padding:50px; font-size:30px; margin-top:30px;">
+            <div style="border-style:solid; padding-left:50px; background-color: red; width:890px; height:100px; padding:50px; font-size:30px; margin-top:30px;">
                 <h1>Aheer Fashion</h1>
             </div>
-            <div style="background-color:green; padding:10px;">
+            <div style="background-color:green; padding:10px; width:976px; ">
                 <a href="home.html"> <button class="button" >home</button></a>
                 <a href="women.html"><button class="button">women</button></a>
                 <a href="men.html"><button class="button">men</button>
@@ -59,7 +60,7 @@
      </div>  </a>
             </div>
 
-<div style="border-style: solid; width:100%; height:600px; background-color:aliceblue; ">
+<div style="border-style: solid; width:100%; height:600px; background-color:white; ">
  
 
             <img class="img" src="men images/winter jackets.jpg" alt="jackets pic" title="15$">
@@ -80,19 +81,19 @@
             <img class="img" src="men images/images-3.jpg" alt="images pic" title="8$">
             <img class="img" src="men images/images-2.jpg" alt="images pic" title="20$">
             <img class="img" src="men images/images-1.jpg" alt="images pic" title="15$">
-            <img class="img" src="men images/images-2.jpg" alt="images pic" title="10$">
-            <img class="img" src="men images" alt="" title=""></div> </div>
+            
+            </div> </div>
 
- <div style="border-style: solid; width:100%; padding:20px; height:250px;  background-color:salmon ">
+ <div name="footer" style="border-style: solid; width:96%; padding:20px; height:250px;  background-color:grey;">
 
-            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block; ">
+            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block;  background-color:salmon ">
                 <h3>About us</h3>
                 <hr><b>Paragraph</b>
                 <p>Fashion is a popular style of clothes, hair, manners, habits, etc. at a particular time or place. Clothes
                     mark out a man’s status. The craze for fashion is great among young people all over the world. Fashion
                     has spread in all the spheres of our life. </p>
             </div>
-            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block; ">
+            <div style="border-style:solid;margin:10px; float:left; width:30%; height:90%; display:inline-block;  background-color:salmon ">
                 <h3>Branches</h3>
                 <hr>
                 <ol>
@@ -103,9 +104,12 @@
                     <li>Fasalabad</li>
                 </ol>
             </div>
-            <div style="border-style:solid; margin:10px; float:left; width:30%; height:90%; display:inline-block;  ">
-                <h3>footer</h3>
-                <hr>
+            <div style="border-style:solid; margin:10px; float:left; width:30%; height:90%; display:inline-block;  background-color:salmon ">
+                <h3>Developer</h3>
+                  <hr>
+                I am Mazhar Aheer. I am learning Web and Mobile developement using HTML, CSS, JavaScipt, React, React Native.
+                You can view my code on <a href="https://github.com/mazharaheer" target="_blank" >GitHub</a>
+              
             </div>
 
         </div>
