--- a/ch-7/input-fields.html
+++ b/ch-7/input-fields.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <h1 style="margin-left:320px">HTML Input Fields</h1>
+    <h1 style="margin-left:330px; ">HTML Input Fields</h1>
 
-    <form action="home.html" style="margin-top:50px; margin-left:300px; border-style:solid; width:250px; padding:30px" >
-       <h3>Form Name</h3>
+    <form action="home.html" style="margin-top:30px; margin-left:300px; border-style:solid; width:250px; padding:30px; background-color:goldenrod;" >
+       <em><h2>Registration Form</h2></em>
         text field <br>
         <input type="text" name="anyText" maxlength="10" required><br><br> 
         pasword field <br>
@@ -26,7 +26,14 @@
         Month <br>
         <input type="month"><br><br>
         Text Area <br>
-        <textarea name="" id="" cols="20" rows="5"></textarea><br>
+        <textarea name="" id="" cols="20" rows="5"></textarea><br> <br>
+       What is your favourite language?<br><br> 
+       <Input type="checkbox" name="language" value="PHP">PHP</Input>
+        <Input type="checkbox" name="language" value="ASP.NET">ASP.NET</Input>
+         <Input type="checkbox" name="language" value="Java">Java</Input> <br><br>
+         Gender: <br><br>
+         <input type="radio" name="gender" value="male">Male</input>
+         <input type="radio" name="gender" value="female">Female </input><br><br>
 
         <button>Submit</button>
 
