facebook page created

--- a/ch-8/fasbook page/Facebook.html
+++ b/ch-8/fasbook page/Facebook.html
@@ -16,7 +16,7 @@
 <div style="margin-left:900px;  margin-top:-23px;  "><a href="fasbook.html"> <button style=" background-color:dodgerblue;" >Log in</button> </div><a></div>
 
 
-    <div name=footer style="border-style:solid; height:600px; width:985px;">
+    <div name=footer style="border-style:solid; height:600px; width:985px; background-color:aliceblue;">
 
 <div style="margin-left:500px;" ><h1>Creat a new account</h1></div>
 <div style="margin-left:500px;"><h3>It's free and always will be.</h3></div>
@@ -24,9 +24,81 @@
 <div style="margin-left:500px;" ><input type="text" style= "height:30px; width:420px;" placeholder="Mobile number or email address"></div><br>
 <div style="margin-left:500px;" ><input type="Password" style= "height:30px; width:420px;" placeholder="New Password"></div><br>
 <div style="margin-left:720px; margin-top:-162px;" ><input type="text" style="height:30px; width:200px;"  placeholder="Surname"></div><br>
+<div style="margin-left:500px; margin-top:120px;"><b>Birthday</b><br>
+<select name="days" style="height:30px; width:60px; margin-top:10px;" >
+<option value="Day">Day</option>
+<option value="1">1</option>
+<option value="2">2</option>
+<option value="3">3</option>
+<option value="4">4</option>
+<option value="5">5</option>
+<option value="6">6</option>
+<option value="7">7</option>
+<option value="8">8</option>
+<option value="9">9</option>
+<option value="10">10</option>
+<option value="11">11</option>
+<option value="12">12</option>
+<option value="13">13</option>
+<option value="14">14</option>
+<option value="15">15</option>
+<option value="16">16</option>
+<option value="17">17</option>
+<option value="18">18</option>
+<option value="19">19</option>
+<option value="20">20</option>
+<option value="21">21</option>
+<option value="22">22</option>
+<option value="23">23</option>
+<option value="24">24</option>
+<option value="25">25</option>
+<option value="26">26</option>
+<option value="27">27</option>
+<option value="28">28</option>
+<option value="29">29</option>
+<option value="30">30</option>
+<option value="31">31</option>    
+</select>
 
+<select name="Months" id=""  style="height:30px; width:70px;">
+<option value="Month">Month</option>
+<option value="Jan">Jan</option>
+<option value="Feb">Feb</option>
+<option value="Mar">Mar</option>
+<option value="Apr">Apr</option>
+<option value="May">May</option>
+<option value="Jun">Jun</option>
+<option value="Jul">Jul</option>
+<option value="Aug">Aug</option>
+<option value="Sept">Sept</option>
+<option value="Oct">Oct</option>
+<option value="Nov">Nov</option>
+<option value="Des">Des</option>  
+</select>
 
-
-    </div>
+<select name="Year" id=""  style="height:30px; width:70px;">
+<option value="Year">Year</option>
+<option value="2017">2017</option>
+<option value="2016">2016</option>
+<option value="2015">2015</option>
+<option value="2014">2014</option>
+<option value="2013">2013</option>
+<option value="2012">2012</option>
+<option value="2011">2011</option>
+<option value="2010">2010</option>
+<option value="2009">2009</option>
+<option value="2008">2008</option>
+<option value="2007">2007</option>
+<option value=2006"">2006</option>
+<option value="2005">2005</option>
+<option value="2004">2004</option>
+<option value="2003">2003</option>
+<option value="2002">2002</option>
+<option value="2001">2001</option>
+<option value="2000">2000</option>    
+</select>
+</div>
+<div><input type="radio" name="gender" value="Female" style=" margin-left:500px; margin-top:20px;">Female <input type="radio" name="gender" value="Male">Male  </div>
+<div><a href="fasbook.html" ><button  style="margin-left:500px; margin-top:20px; height:40px; width:210px; background-color:green;" ><h2 style="color:white; margin:8px; ">Creat Account</h2></button></a></div>
 </body>
 </html>
