facebook page created

--- a/ch-8/fasbook page/Facebook.html
+++ b/ch-8/fasbook page/Facebook.html
@@ -20,9 +20,9 @@
 
 <div style="margin-left:500px;" ><h1>Creat a new account</h1></div>
 <div style="margin-left:500px;"><h3>It's free and always will be.</h3></div>
-<div style="margin-left:500px;" ><input type="text" style= "height:30px; width:200px;" placeholder="First name" ></div><br>
+<div style="margin-left:500px;" ><input type="text" style= "  height:30px; width:200px;" placeholder="First name" ></div><br>
 <div style="margin-left:500px;" ><input type="text" style= "height:30px; width:420px;" placeholder="Mobile number or email address"></div><br>
-<div style="margin-left:500px;" ><input type="Password" style= "height:30px; width:420px;" placeholder="New Password"></div><br>
+<div style="margin-left:500px;" ><input type="Password" style=" height:30px; width:420px;" placeholder="New Password"></div><br>
 <div style="margin-left:720px; margin-top:-162px;" ><input type="text" style="height:30px; width:200px;"  placeholder="Surname"></div><br>
 <div style="margin-left:500px; margin-top:120px;"><b>Birthday</b><br>
 <select name="days" style="height:30px; width:60px; margin-top:10px;" >
@@ -99,6 +99,14 @@
 </select>
 </div>
 <div><input type="radio" name="gender" value="Female" style=" margin-left:500px; margin-top:20px;">Female <input type="radio" name="gender" value="Male">Male  </div>
+<div style="margin-top:20px; margin-left:500px;">
+By clicking Create Account, you agree to our <br>
+Terms and confirm that you have read our Data  <br>
+Policy, including our Cookie Use Policy. <br>
+ You may receive SMS message notifications <br>
+  from Facebook and can opt out at any time.</div>
 <div><a href="fasbook.html" ><button  style="margin-left:500px; margin-top:20px; height:40px; width:210px; background-color:green;" ><h2 style="color:white; margin:8px; ">Creat Account</h2></button></a></div>
+
+
 </body>
 </html>
