facebook page created

--- a/ch-8/fasbook page/Facebook.html
+++ b/ch-8/fasbook page/Facebook.html
@@ -10,21 +10,21 @@
     
 
 <div style="border-style:solid; background-color:darkblue; height:80px;"  >
-    <h1 style="color:white; float:left;"  >facebook</h1>
-  <div style="margin-left:500px; margin-top:10px; color:white;"> Email or Phone <br> <input type="email"> </div>
-  <div style="margin-left:580px; color:white; float:left; margin-top:-40px; " > Password <br> <input type="password"> <br></div> 
-<div style="margin-left:900px;  margin-top:-23px;  "><a href="fasbook.html"> <button style=" background-color:dodgerblue;" >Log in</button> </div><a></div>
+    <h1 style="color:white; float:left; font-size:45px; margin-left:20px; margin-top:20px;"  >facebook</h1>
+  <div style="margin-left:520px; margin-top:10px; color:white;"> Email or Phone <br> <input type="email"> </div>
+  <div style="margin-left:520px; color:white; float:left; margin-top:-40px; " > Password <br> <input type="password"> <br></div> 
+<div style="margin-left:905px;  margin-top:-23px; "><a href="fasbook.html"> <button style=" background-color:mediumblue; height:24px; width:55px; color:white;" > Log in </button> </div><a></div>
 
 
     <div name=footer style="border-style:solid; height:600px; width:985px; background-color:aliceblue;">
 
-<div style="margin-left:500px;" ><h1>Creat a new account</h1></div>
-<div style="margin-left:500px;"><h3>It's free and always will be.</h3></div>
-<div style="margin-left:500px;" ><input type="text" style= "  height:30px; width:200px;" placeholder="First name" ></div><br>
-<div style="margin-left:500px;" ><input type="text" style= "height:30px; width:420px;" placeholder="Mobile number or email address"></div><br>
-<div style="margin-left:500px;" ><input type="Password" style=" height:30px; width:420px;" placeholder="New Password"></div><br>
-<div style="margin-left:720px; margin-top:-162px;" ><input type="text" style="height:30px; width:200px;"  placeholder="Surname"></div><br>
-<div style="margin-left:500px; margin-top:120px;"><b>Birthday</b><br>
+<div style="margin-left:520px; font-size:35px; margin-top:-25px;" ><h3>Create a new account</h3></div>
+<div style="margin-left:520px; margin-top:-40px; font-size:20px;">It's free and always will be.</div>
+<div style="margin-left:520px;" ><input type="text" style= "  height:30px; width:200px; margin-top:20px; font-size:18px;" placeholder="First name" ></div><br>
+<div style="margin-left:520px;" ><input type="text" style= "height:30px; width:420px; font-size:18px; " placeholder="Mobile number or email address"></div><br>
+<div style="margin-left:520px;" ><input type="Password" style=" height:30px; width:420px; font-size:18px; " placeholder="New Password"></div><br>
+<div style="margin-left:740px; margin-top:-162px;" ><input type="text" style="height:30px; width:200px; font-size:18px;"  placeholder="Surname"></div><br>
+<div style="margin-left:520px; margin-top:120px; font-size:20px;">Birthday<br>
 <select name="days" style="height:30px; width:60px; margin-top:10px;" >
 <option value="Day">Day</option>
 <option value="1">1</option>
@@ -98,14 +98,15 @@
 <option value="2000">2000</option>    
 </select>
 </div>
-<div><input type="radio" name="gender" value="Female" style=" margin-left:500px; margin-top:20px;">Female <input type="radio" name="gender" value="Male">Male  </div>
-<div style="margin-top:20px; margin-left:500px;">
+
+<div><input type="radio" name="gender" value="Female" style=" margin-left:520px; margin-top:20px;">Female <input type="radio" name="gender" value="Male">Male  </div>
+<div style="margin-top:20px; margin-left:520px;">
 By clicking Create Account, you agree to our <br>
 Terms and confirm that you have read our Data  <br>
 Policy, including our Cookie Use Policy. <br>
  You may receive SMS message notifications <br>
   from Facebook and can opt out at any time.</div>
-<div><a href="fasbook.html" ><button  style="margin-left:500px; margin-top:20px; height:40px; width:210px; background-color:green;" ><h2 style="color:white; margin:8px; ">Creat Account</h2></button></a></div>
+<div><a href="fasbook.html" ><button  style="margin-left:520px; margin-top:20px; height:40px; width:210px; background-color:green;" ><h2 style="color:white; margin:8px; ">Create Account</h2></button></a></div>
 
 
 </body>
