--- a/nutralack/Index.html
+++ b/nutralack/Index.html
@@ -11,7 +11,7 @@
 <div style= "border-style:hidden; background-color:#0072BC; height:620px; width:990px; padding:10px;">
 
 <center>    
-<div  style=" background-image:url(hh.png); border-radius:5%;  margin-top:140px;border-style:hidden; background-color:bisque; height:323px; width:495px; padding:10px;">
+<div  style=" background-image:url(worldmap.png); border-radius:5%;  margin-top:140px;border-style:hidden; background-color:#E1DECD; height:323px; width:495px; padding:10px;">
 </center>
 
 <img src="pkflag.png" alt="" height="40px" width="60px" style=" float:left; margin-top:-12%; margin-left:38%;">
