--- a/nutralack/Index.html
+++ b/nutralack/Index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mazhar Aheer</title>
+    <title>Welcome to Nutralake Helthcare</title>
 </head>
-<body>
+<body  style="background-color:#0072BC">
     
-<div style= "border-style:hidden; background-color:#0072BC; height:620px; width:990px; padding:10px;">
+<div>
 
 <center>    
-<div  style=" background-image:url(worldmap.png); border-radius:5%;  margin-top:140px;border-style:hidden; background-color:#E1DECD; height:323px; width:495px; padding:10px;">
+<div  style="background-image:url(worldmap.png); border-radius:5%;  margin-top:140px;border-style:hidden; background-color:bisque; height:323px; width:495px; padding:10px;">
 </center>
 
-<img src="pkflag.png" alt="" height="40px" width="60px" style=" float:left; margin-top:-12%; margin-left:38%;">
-<img src="uaeflag.png" alt="" height="40px" width="60px" style=" float:left; margin-top:-12%; margin-left:55%;">
+<a href="http://www.nutralake.com/"><img src="pkflag.png" alt="" height="40px" width="60px" style=" float:left; margin-top:-12%; margin-left:38%;"></a>
+<a href="uae.html"><img src="uaeflag.png" alt="" height="40px" width="60px" style=" float:left; margin-top:-12%; margin-left:55%;"></a>
 <img src="logo.png" alt="" height="10%" width="20%" style="float:left; margin-top:-32%; margin-left:25%; ">
-<div style="font-size:150%; margin-top:-25%; margin-left:39%;"><h4>Welcom to Nutralake</h4></div>
-<div style="font-size:110%; margin-top:-3%; margin-left:42%;" >Choose your location</div>
+<div style="font-size:150%; margin-top:-25%; margin-left:34%;"><h4>Welcom to Nutralake Healthcare</h4></div>
+<div style="font-size:110%; margin-top:-3%; margin-left:42%;" >Select your country</div>
 </div>
 
 </body>
