--- a/ch-7/input-fields.html
+++ b/ch-7/input-fields.html
@@ -11,14 +11,14 @@
 <body>
     <h1 style="margin-left:330px; ">HTML Input Fields</h1>
 
-    <form action="home.html" style="margin-top:30px; margin-left:300px; border-style:solid; width:250px; padding:30px; background-color:goldenrod;" >
+    <form action="home.html" style="margin-top:30px; margin-left:300px; border-style:solid; width:250px; padding:40px; background-color:goldenrod; lightness, alpha) green, blue, alpha);" >
        <em><h2>Registration Form</h2></em>
         text field <br>
         <input type="text" name="anyText" maxlength="10" required><br><br> 
         pasword field <br>
         <input type="password" minlength="6"><br><br> 
         Email <br>
-        <input type="email" size="25" ><br><br> 
+        <input type="email" size="20" ><br><br> 
         Date of birth <br>
         <input type="date" ><br><br> 
         Time <br>
