--- a/nutralack/Index.html
+++ b/nutralack/Index.html
@@ -13,9 +13,22 @@
 <center>    
 <div  style="background-image:url(worldmap.png); border-radius:5%;  margin-top:140px;border-style:hidden; background-color:bisque; height:323px; width:495px; padding:10px;">
 </center>
-
-<a href="http://www.nutralake.com/"><img src="pkflag.png" alt="" height="40px" width="60px" style=" float:left; margin-top:-12%; margin-left:38%;"></a>
-<a href="uae.html"><img src="uaeflag.png" alt="" height="40px" width="60px" style=" float:left; margin-top:-12%; margin-left:55%;"></a>
+<div style=" float:left; margin-top:-12%; margin-left:38%;">
+    <div >
+<a href="http://www.nutralake.com/"><img src="pkflag.png" alt="" height="40px" width="60px" ></a>        
+    </div>
+    <div>
+Pakistan
+    </div>
+</div>
+<div style=" float:left; margin-top:-12%; margin-left:55%;">
+    <div>
+<a href="uae.html"><img src="uaeflag.png" alt="" height="40px" width="60px" ></a>        
+    </div>
+    <div style="margin-left:13px;">
+        UAE
+    </div>
+</div>
 <img src="logo.png" alt="" height="10%" width="20%" style="float:left; margin-top:-32%; margin-left:25%; ">
 <div style="font-size:150%; margin-top:-25%; margin-left:34%;"><h4>Welcom to Nutralake Healthcare</h4></div>
 <div style="font-size:110%; margin-top:-3%; margin-left:42%;" >Select your country</div>
