--- a/ch-7/input-fields.html
+++ b/ch-7/input-fields.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <h1 style="margin-left:330px; ">HTML Input Fields</h1>
+    <h1 style="margin-left:330px; color:darkred ">HTML Input Fields</h1>
 
-    <form action="home.html" style="margin-top:30px; margin-left:300px; border-style:solid; width:250px; padding:40px; background-color:goldenrod; lightness, alpha) green, blue, alpha);" >
-       <em><h2>Registration Form</h2></em>
+    <form action="home.html" style="margin-top:30px; margin-left:305px; border-style:solid; width:250px; padding:30px; background-color:darkorange;" >
+       <em><h2 style=" color:darkred">Registration Form</h2></em>
         text field <br>
         <input type="text" name="anyText" maxlength="10" required><br><br> 
         pasword field <br>
@@ -28,11 +28,11 @@
         Text Area <br>
         <textarea name="" id="" cols="20" rows="5"></textarea><br> <br>
        What is your favourite language?<br><br> 
-       <Input type="checkbox" name="language" value="PHP">PHP</Input>
+       <Input type="checkbox" name="language" value="PHP" required>PHP</Input>
         <Input type="checkbox" name="language" value="ASP.NET">ASP.NET</Input>
          <Input type="checkbox" name="language" value="Java">Java</Input> <br><br>
          Gender: <br><br>
-         <input type="radio" name="gender" value="male">Male</input>
+         <input type="radio" name="gender" value="male" required>Male</input>
          <input type="radio" name="gender" value="female">Female </input><br><br>
 
         <button>Submit</button>
