--- a/web-page/index.html
+++ b/web-page/index.html
@@ -11,6 +11,16 @@
     
 <div class="class-2" ></div>
 <div class="class-3"><center><h1 style="padding:40px;">FASHY</h1></center></div>
-<div class="class-4"></div>
+<div class="class-4"><a href="home">HOME</a></div>
+<div class="class-6"></div>
+
+<div>   
+ <img class="class-7" src="img-1.jpg" alt="">
+ <img class="class-7" src="img-2.jpg" alt="">
+ <img class="class-7" src="img-3.jpg" alt="">
+ <img class="class-7" src="img-4.jpg" alt="">
+ <img class="class-7" src="img-5.jpg" alt="">
+ <img class="class-7" src="img-6.jpg" alt="">   
+</div>
 </body>
 </html>
