--- a/web-page/index.html
+++ b/web-page/index.html
@@ -8,13 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="class-1">
-    
 <div class="class-2" ></div>
-<div class="class-3"><center><h1 style="padding:40px;">FASHY</h1></center></div>
-<div class="class-4"><a href="home">HOME</a></div>
-<div class="class-6"></div>
+<div class="class-3"><center><h1 style="padding:40px;" >FASHY</h1></center></div>
 
-<div>   
+<div class="class-4">
+<a href="home">HOME</a>
+<a href="BLOG">BLOG</a>
+<a href="LIFESTYLE">LIFESTYLE</a>
+<a href="ABOUT ME">ABOUT ME</a>
+<a href="FEATURES">FEATUES</a>
+</div>
+
+<div class="class-6"></div>
+<div id="slideshow">   
  <img class="class-7" src="img-1.jpg" alt="">
  <img class="class-7" src="img-2.jpg" alt="">
  <img class="class-7" src="img-3.jpg" alt="">
