--- a/web-page/index.html
+++ b/web-page/index.html
@@ -12,21 +12,22 @@
 <div class="class-3"><center><h1 style="padding:40px;" >FASHY</h1></center></div>
 
 <div class="class-4">
-<a href="home">HOME</a>
-<a href="BLOG">BLOG</a>
+<a href="home">HOME</a> 
 <a href="LIFESTYLE">LIFESTYLE</a>
 <a href="ABOUT ME">ABOUT ME</a>
 <a href="FEATURES">FEATUES</a>
 </div>
 
-<div class="class-6"></div>
-<div id="slideshow">   
- <img class="class-7" src="img-1.jpg" alt="">
- <img class="class-7" src="img-2.jpg" alt="">
- <img class="class-7" src="img-3.jpg" alt="">
- <img class="class-7" src="img-4.jpg" alt="">
- <img class="class-7" src="img-5.jpg" alt="">
- <img class="class-7" src="img-6.jpg" alt="">   
+<div class="class-5"></div>
+
+<div class="class-6">  
+<img class="class-7" src="img-1.jpg" alt="">
+<img class="class-7" src="img-2.jpg" alt="">
+<img class="class-7" src="img-3.jpg" alt="">
+<img class="class-7" src="img-4.jpg" alt="">
+<img class="class-7" src="img-5.jpg" alt="">
+<img class="class-7" src="img-6.jpg" alt="">   
 </div>
+
 </body>
 </html>
