--- a/ch-2/sup-sub.html
+++ b/ch-2/sup-sub.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mazhar Aheer</title>
 </head>
-<body>
+<body style="background-image:url(pakarmy-image.jpg);" >
+    
+
+
+
+
     <u><h1 align="middle" >SUPERSCRIPT</h1></u>
 
     <h3>1<sup>st</sup>position</h3>
