--- a/ch-3/nested-ordered-list.html
+++ b/ch-3/nested-ordered-list.html
@@ -6,14 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mazhar Aheer</title>
 </head>
-<body>
-    <h1 align="middle" >NESTED ORDERED LIST</h1>
+<body style="background-image:url(wall-image.jpg); ">
+
+<h1 style="margin-left:5%; color:red;">NESTED ORDERED LIST</h1>
+
+<h2 style="margin-left:5%; color:red;" >    
 <ol>
 
     <li>9th class subjects<ol><li>English</li><li>Sindhi</li><li>Chemestry</li><li>Pakistan studies</li><li>Bio/computer</li></ol>
     </li>
 <li>10th class subjects<ol><li>Mathes</li><li>Physics</li><li>Islamiat</li><li>Urdu</li><li>English</li></ol></li>
-</ol>
+</ol></h2>
 
 </body>
 </html>
