--- a/ch-2/headings-paragraphs.html
+++ b/ch-2/headings-paragraphs.html
@@ -6,14 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mazhar Aheer</title>
 </head>
-<body>
-   <u> <center><h1> BRANCHES OF PHYSICS</h1></center></u>
+<body style="background-color:bisque;">
 
-  <P><h2>Mechanics:</h2>It deals with the motion of objects with or without reference of force.</P>
+<style>
+    .img{
+        height:200px;
+        width:400px;
+    }
+</style>
+
+<u> <center><h1> BRANCHES OF PHYSICS</h1></center></u>
+
+
+<P><h2>Mechanics:</h2>It deals with the motion of objects with or without reference of force.</P>
+<img class="img" src="machenicsphy-image.jpg" alt="">
+
 <p><h3>Electricity:</h3>It is concerned with the phenomena and effects related to electric charges</p>
+<img class="img" src="elctricity-image.jpg" alt="">
+
 <p><h4>Atomic physics:</h4>It is concerned with the structer and properties of the atom.</p>
+<img class="img" src="atomicphy-imag.jpg" alt="">
+
 <p><h5>Astro physics:</h5>It is concerned with the study of the physics of astronomical bodies.</p>
+<img class="img" src="astrophy-image.jpg" alt="">
+
 <p><h6>Nuclear physics:</h6>This branch is concerned with the structer , properties and reactions of the nuclie atoms.</p>
+<img class="img" src="nuclearphy-image.jpg" alt="">
 
 </body>
 </html>
