--- a/web-page/index.html
+++ b/web-page/index.html
@@ -8,26 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="class-1">
+    
 <div class="class-2" ></div>
-<div class="class-3"><center><h1 style="padding:40px;" >FASHY</h1></center></div>
+
+<div class="class-3"><center><h1 style="padding:40px;" >ISLAMY</h1></center></div>
 
 <div class="class-4">
-<a href="home">HOME</a> 
-<a href="LIFESTYLE">LIFESTYLE</a>
-<a href="ABOUT ME">ABOUT ME</a>
-<a href="FEATURES">FEATUES</a>
-</div>
 
-<div class="class-5"></div>
+<a href="HOME.html"><button class="class-5">HOME</button></a> 
+<a href="LIFESTYLE.html"><button class="class-5">LIFESTYLE</button></a>
+<a href="ABOUT ME.html"><button class="class-5">ABOUT ME</button></a>
+<a href="FEATURES.html"><button class="class-5">FEATUES</button></a></div>
 
-<div class="class-6">  
-<img class="class-7" src="img-1.jpg" alt="">
-<img class="class-7" src="img-2.jpg" alt="">
-<img class="class-7" src="img-3.jpg" alt="">
-<img class="class-7" src="img-4.jpg" alt="">
-<img class="class-7" src="img-5.jpg" alt="">
-<img class="class-7" src="img-6.jpg" alt="">   
-</div>
+<div class="class-6"></div>
+
+<div>  
+<img class="class-8" src="img-1.jpg" alt="">
+<img class="class-8" src="img-2.jpg" alt="">
+<img class="class-8" src="img-3.jpg" alt="">
+<img class="class-8" src="img-4.jpg" alt="">
+<img class="class-8" src="img-5.jpg" alt="">
+<img class="class-8" src="img-6.jpg" alt=""></div>
 
 </body>
 </html>
