--- a/ch-3/nested-ordered-list.html
+++ b/ch-3/nested-ordered-list.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mazhar Aheer</title>
 </head>
-<body style="background-image:url(wall-image.jpg); ">
+<body style="background-image:url(city-image.jpg); height:80px; ">
 
 <h1 style="margin-left:5%; color:red;">NESTED ORDERED LIST</h1>
 
