web page created

--- a/web-page/contact-us.html
+++ b/web-page/contact-us.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>mazhar aheer</title>
+    <title>MAZHAR AHEER</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="class-1">
+<body  class="class-1">
+    
     
 <div class="class-2" ></div>
 
@@ -18,7 +19,7 @@
 <a href="index.html"><button class="class-5">HOME</button></a> 
 <a href="lifestyle.html"><button class="class-5">LIFESTYLE</button></a>
 <a href="about-me.html"><button class="class-5">ABOUT ME</button></a>
-<a href="contact-us.html"><button class="class-5">CONTACT US</button></a></div>
+
 
 <div class="class-6"></div>
 
