--- a/web-page/lifestyle.html
+++ b/web-page/lifestyle.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>mazhar aheer</title>
+    <title>MAZHAR AHEER</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="class-1">
-    
+<body  class="class-1">
+
+        
 <div class="class-2" ></div>
 
 <div class="class-3"><center><h1 style="padding:40px;" >ISLAMY</h1></center></div>
@@ -16,7 +17,6 @@
 <div class="class-4">
 
 <a href="index.html"><button class="class-5">HOME</button></a> 
-<a href="lifestyle.html"><button class="class-5">LIFESTYLE</button></a>
 <a href="about-me.html"><button class="class-5">ABOUT ME</button></a>
 <a href="contact-us.html"><button class="class-5">CONTACT US</button></a></div>
 
