web page updated

--- a/construction/gallery.html
+++ b/construction/gallery.html
@@ -9,11 +9,6 @@
 </head>
 <body>
     
-<div>
- <img class="class-4" src="construction.jpg" alt="">
-</div>
-
-
  <div class="class-2">
 
  <a href="index.html"><button class="class-3">HOME</button></a> 
@@ -21,7 +16,32 @@
  <a href="about-us.html"><button class="class-3">ABOUT US</button></a>
 </div>
 
-<div body, class="class-5"></div>
+<div body, class="class-5">
+  <img class="class-7" src="a1.jpg" alt=""> 
+  <img class="class-7" src="a2.jpg" alt=""> 
+  <img class="class-7" src="a5.jpg" alt=""> 
+  <img class="class-7" src="a6.jpg" alt=""> 
+  <img class="class-7" src="a7.jpg" alt=""> 
+  <img class="class-7" src="a8.jpg" alt=""> 
+  <img class="class-7" src="a9.jpg" alt=""> 
+  <img class="class-7" src="a11.jpg" alt=""> 
+  <img class="class-7" src="a13.jpg" alt=""> 
+  <img class="class-7" src="a14.jpg" alt=""> 
+  <img class="class-7" src="a16.jpg" alt="">
+  <img class="class-7" src="a17.jpg" alt="">
+  <img class="class-7" src="a18.jpg" alt="">
+  <img class="class-7" src="a19.jpg" alt="">
+  <img class="class-7" src="a20.jpg" alt="">
+  <img class="class-7" src="a21.jpg" alt="">
+  <img class="class-7" src="a22.jpg" alt="">
+  <img class="class-7" src="a23.jpg" alt="">
+  <img class="class-7" src="a24.jpg" alt="">
+  <img class="class-7" src="a25.jpg" alt="">
+  <img class="class-7" src="a26.jpg" alt="">
+  <img class="class-7" src="a27.jpg" alt="">
+  <img class="class-7" src="a28.jpg" alt="">
+  <img class="class-7" src="a29.jpg" alt="">
+</div>
 
 <div footer, class="class-6"></div>
 
