--- a/ch-8/aheer fashion/contact.html
+++ b/ch-8/aheer fashion/contact.html
@@ -66,7 +66,8 @@
  Massage<br>
  <textarea name="" id="" cols="20" rows="5" placeholder="Type your massage here"></textarea><br><br>
 
- <button style="height:30px; width:60px;" >send</button></div>
+ <button style="height:30px; width:60px;" >send</button>
+ </div>
 
  <div name=footer style="border-style:solid; padding:20px; height:250px;  background-color:grey; ">
 
