--- a/construction/contact-us.html
+++ b/construction/contact-us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,25 +8,42 @@
     <title>MAZHAR AHEER</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<div>
- <img class="class-4" src="construction.jpg" alt="">
-</div>
+    <div class="class-2">
 
-<div class="class-2">
+        <a href="index.html"><button class="class-3">HOME</button></a>
+        <a href="gallery.html"><button id="gallery" class="class-3">GALLERY</button></a>
 
- <a href="index.html"><button class="class-3">HOME</button></a> 
- <a href="gallery.html"><button id="gallery" class="class-3">GALLERY</button></a>
- 
- <a href="about-us.html"><button class="class-3">ABOUT US</button></a>
+        <a href="about-us.html"><button class="class-3">ABOUT US</button></a>
 
-</div>
+    </div>
 
-<div body, class="class-5"></div>
 
-<div footer, class="class-6"></div>
+
+    <div body, class="class-5">
+
+        <div class="class-8">
+
+            <form action="index.html">
+
+
+                Name <br>
+                <input type="text" placeholder="Name"><br><br> Email <br>
+                <input type="email" placeholder="Email"><br><br> Massage
+                <br>
+                <textarea name="" id="" cols="20" rows="5" placeholder="Type your massage here"></textarea><br><br>
+            <button class="class-9">send</button>
+        </div>
+
+    </div>
+
+    </div>
+
+    <div footer, class="class-6"></div>
 
 
 </body>
+
 </html>
