cv web page updated

--- a/cv web page/index.html
+++ b/cv web page/index.html
@@ -13,7 +13,15 @@
 
     <div class="main-div">
         <div class="row outer-div">
-            <div class="left-div col-4"></div>
+            <div class="left-div col-4">
+                <img class="image" src="mazhar.jpg" alt="">
+                <div class="left-internal1adiv"><P class="left-internaladiv">MAZHAR AHEER</P></div>
+                <div class="left-internal1bdiv"></div>
+                <div class="left-internal2adiv"></div>
+                <div class="left-internal2bdiv"></div>
+                <div class="left-internal3adiv"></div>
+                <div class="left-internal3bdiv"></div>
+            </div>
             <div class="right-div col-7 "></div>
         </div>
     </div>
