--- a/cv web page/index.html
+++ b/cv web page/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap/js/bootstrap.min.js">
+
 </head>
 
 <body>
@@ -15,7 +19,10 @@
         <div class="row outer-div">
             <div class="left-div col-4">
                 <img class="image" src="mazhar.jpg" alt="">
-                <div class="left-internal1adiv"><P class="left-internaladiv">MAZHAR AHEER</P></div>
+                <button class="btn btn-primary">Demo</button>
+                <div class="left-internal1adiv">
+                    <P class="left-internaladiv">MAZHAR AHEER</P>
+                </div>
                 <div class="left-internal1bdiv"></div>
                 <div class="left-internal2adiv"></div>
                 <div class="left-internal2bdiv"></div>
