--- a/ch-6/spaning-columns.html
+++ b/ch-6/spaning-columns.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>mazhar aheer</title>
 </head>
-<body>
+<body style="background-image:">
    <u> <em><h1 style="color:brown; margin-left:50px " >JAAM ASLAM</h1></em></u>
 
     <table style="color:darkblue "   >
