--- a/cv web page/index.html
+++ b/cv web page/index.html
@@ -15,19 +15,21 @@
 
 <body>
 
-    <div class="main-div">
+    <div class="main-div container">
         <div class="row outer-div">
-            <div class="left-div col-4">
+            <div class="left-div col-md-4 col-sm-4">
                 <img class="image" src="mazhar.jpg" alt="">
-                <button class="btn btn-primary">Demo</button>
-                <div class="left-internal1adiv">
-                    <P class="left-internaladiv">MAZHAR AHEER</P>
+                <div class="left-internal-1A-div">
+                    <P class="left-internal-1a-div">MAZHAR AHEER</P>
                 </div>
-                <div class="left-internal1bdiv"></div>
-                <div class="left-internal2adiv"></div>
-                <div class="left-internal2bdiv"></div>
-                <div class="left-internal3adiv"></div>
-                <div class="left-internal3bdiv"></div>
+                <div class="left-internal-1B-div"></div>
+                <div class="left-internal-2A-div"><p class="left-internal-2a-div">PROFILE</p></div>
+                <div class="left-internal-2B-div"></div>
+                <div class="left-internal-3A-div"><p class="left-internal-3a-div">SKILLS</p></div>
+                <div class="left-internal-3B-div"></div>
+                <div class="left-internal-4A-div"><p class="left-internal-4a-div">HOBBIES</p></div>
+                <div class="left-internal-4B-div"></div>
+
             </div>
             <div class="right-div col-7 "></div>
         </div>
